edit de .env